--- a/spoon-javadoc/pom.xml
+++ b/spoon-javadoc/pom.xml
@@ -12,19 +12,15 @@
 
     <artifactId>spoon-javadoc</artifactId>
     <packaging>jar</packaging>
-    <version>10.2.0-SNAPSHOT</version>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <version>${spoon-version}</version>
+    <name>Spoon Javadoc</name>
+    <description>A javadoc parser for the java source code analysis tool spoon.</description>
 
     <dependencies>
         <dependency>
             <groupId>fr.inria.gforge.spoon</groupId>
             <artifactId>spoon-core</artifactId>
-            <version>10.2.0-SNAPSHOT</version>
+            <version>${spoon-version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
