--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -142,22 +142,17 @@ jobs:
       - name: Run Javadoc quality check
         run: ./chore/check-javadoc-regressions.py COMPARE_WITH_MASTER
 
-  code-quality: # we create a new step here because qodana analyzer takes around 10min
+  code-quality:
     runs-on: ubuntu-latest
-    env:
-      MAVEN_OPTS: -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false
-      QODANA_LINTER: jetbrains/qodana-jvm-community@sha256:c388ddd7b852296f71b1a786d3b30f458a993eb252d5cd4963422007e5b824db
     name: code-quality qodana
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3.0.2
         with:
           fetch-depth: 0
-      - uses: actions/setup-java@d854b6da19cdadd9a010605529e522c2393ebd38 # tag=v3.5.0
-        with:
-          java-version: 17
-          distribution: ${{ env.JAVA_DISTRIBUTION }}
       - name: 'Qodana Scan'
-        uses: JetBrains/qodana-action@v2022.2.1
+        uses: JetBrains/qodana-action@v2022.2.2
+        with:
+          args: --source-directory,./src/main/java , --fail-threshold, 0
       - uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: ${{ runner.temp }}/qodana/results/qodana.sarif.json
