--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,7 +1,7 @@
-version: "1.0"
-linter: jetbrains/qodana-jvm-community:2022.2
 profile:
   name: qodana.recommended
+version: "1.0"
+linter: jetbrains/qodana-jvm-community:2022.3-eap
 include:
   - name: Anonymous2MethodRef
   - name: AssignmentToCatchBlockParameter
