--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -156,3 +156,22 @@ jobs:
           distribution: ${{ env.JAVA_DISTRIBUTION }}
       - name: Check status
         run: chore/check-reproducible-builds.sh
+  maven-central-requirements:
+    runs-on: ubuntu-latest
+    env:
+      MAVEN_OPTS: -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+        # the pom checker needs maven 3.9.0
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v4.5
+        with:
+          maven-version: 3.9.0
+      # we dont enforce that the version must be non snapshot as this is not possible for SNAPSHOT versions in our workflow.
+      - name: Check maven pom quality
+        run: mvn org.kordamp.maven:pomchecker-maven-plugin:1.9.0:check-maven-central -D"checker.release=false"
