--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,10 +43,10 @@ jobs:
       - name: Disable Git's autocrlf
         run: git config --global core.autocrlf false
       - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3.5.0
-      - uses: actions/setup-java@5ffc13f4174014e2d4d4572b3d74c3fa61aeb2c2 # v3.11.0
+      - uses: oracle-actions/setup-java@v1
         with:
+          website: jdk.java.net
           java-version: ${{ matrix.java }}
-          distribution: ${{ env.JAVA_DISTRIBUTION }}
 
       - name: Get date for cache # see https://github.com/actions/cache README
         id: get-date
