chore: automerge pinDigest action from renovate

--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,8 @@
             "minor",
             "patch",
             "pin",
-            "digest"
+            "digest",
+            "pinDigest"
          ],
          "automerge":true,
       }
