--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,15 +27,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        java: [11, 17, 19, 20-ea]
+        java: [11, 17, 20, 21-ea]
         os: [ubuntu-latest, windows-latest]
         exclude:
           - os: windows-latest
             java: 17
           - os: windows-latest
-            java: 19
+            java: 20
           - os: windows-latest
-            java: 20-ea
+            java: 21-ea
 
 
 
@@ -45,10 +45,10 @@ jobs:
       - name: Disable Git's autocrlf
         run: git config --global core.autocrlf false
       - uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
-      - uses: actions/setup-java@5ffc13f4174014e2d4d4572b3d74c3fa61aeb2c2 # v3.11.0
+      - uses: oracle-actions/setup-java@v1
         with:
+          website: jdk.java.net
           java-version: ${{ matrix.java }}
-          distribution: ${{ env.JAVA_DISTRIBUTION }}
 
       - name: Get date for cache # see https://github.com/actions/cache README
         id: get-date
