fix: fix renovate.json
renovate.json is invalid, see https://github.com/renovatebot/renovate/issues/6894#issuecomment-1537121202

--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,7 @@
             "digest",
             "pinDigest"
          ],
-         "automerge":true,
+         "automerge":true
       }
    ]
 }
