--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,7 +1,7 @@
 profile:
   name: qodana.recommended
 version: "1.0"
-linter: jetbrains/qodana-jvm-community:2022.3-eap
+linter: jetbrains/qodana-jvm-community:2023.1
 include:
   - name: Anonymous2MethodRef
   - name: AssignmentToCatchBlockParameter
