--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ gradle-app.setting
 
 ## Gradle Enterprise ID File ##
 .mvn/.gradle-enterprise/gradle-enterprise-workspace-id
+# Jreleaser files
+out/
