--- a/spoon-pom/pom.xml
+++ b/spoon-pom/pom.xml
@@ -419,6 +419,11 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <version>3.1.1</version>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
