--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -1,6 +1,6 @@
 project:
   name: spoon-core
-  description: A plugin to lock and validate the integrity of the dependencies of a maven based project.
+  description: Spoon is an open-source library to analyze, rewrite, transform, transpile Java source code. 
   longDescription: Spoon is an open-source library to analyze, rewrite, transform, transpile Java source code. 
                    It parses source files to build a well-designed AST with powerful analysis and transformation API. 
                    It supports modern Java versions up to Java 20.
@@ -13,7 +13,7 @@ project:
     - I-Al-Istannen
   license: (MIT OR CECILL-C)
   links:
-    homepage: https://github.com/chains-project/maven-lockfile
+    homepage: https://github.com/INRIA/spoon
   java:
     groupId: fr.inria.gforge.spoon
     version: 11
