--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-model</artifactId>
       <version>[3.6.0,)</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
