--- a/spoon-javadoc/pom.xml
+++ b/spoon-javadoc/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>spoon-javadoc</artifactId>
     <packaging>jar</packaging>
-    <version>${spoon-version}</version>
+    <version>10.4.0-SNAPSHOT</version>
     <name>Spoon Javadoc</name>
     <description>A javadoc parser for the java source code analysis tool spoon.</description>
 
@@ -20,8 +20,8 @@
         <dependency>
             <groupId>fr.inria.gforge.spoon</groupId>
             <artifactId>spoon-core</artifactId>
-            <version>${spoon-version}</version>
-            <scope>compile</scope>
+            <version>${version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
