Start writing tests

--- a/spoon-javadoc/pom.xml
+++ b/spoon-javadoc/pom.xml
@@ -23,6 +23,13 @@
             <version>${version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.24.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
