--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -65,14 +65,14 @@ jobs:
         run: mv chore/logback.xml src/test/resources/
       - name: Build
         run: |
-          mvn -B test-compile
+          mvn -f spoon-pom -B test-compile
       - name: Fetch final dependencies
         # this is a hack to download the final test dependencies required to actually run the tests
         run: timeout 20 mvn -B test || echo "Done fetching dependencies"
         shell: bash
       - name: Test
-        run: 
-          mvn test
+        run:
+          mvn -f spoon-pom test
       - name: print run tests
         run: cat testResults.spoon
   coverage:
