--- a/spoon-pom/pom.xml
+++ b/spoon-pom/pom.xml
@@ -19,6 +19,11 @@
     <url>http://spoon.gforge.inria.fr/</url>
     <inceptionYear>2007</inceptionYear>
 
+    <modules>
+        <module>../spoon-javadoc</module>
+        <module>..</module>
+    </modules>
+
     <properties>
         <maven.compiler.release>11</maven.compiler.release>
         <runtime.log>target/velocity.log</runtime.log>
@@ -287,6 +292,11 @@
                     </executions>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.8.10</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <extensions>
@@ -474,7 +484,21 @@
             </build>
         </profile>
     </profiles>
-    
+
+    <licenses>
+        <license>
+            <name>CeCILL-C</name>
+            <comments>French equivalent to LGPL</comments>
+            <url>https://cecill.info/licences/Licence_CeCILL-C_V1-en.txt</url>
+            <distribution>repo</distribution>
+        </license>
+        <license>
+            <name>MIT</name>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <developers>
         <!-- the list is maintained in the README https://github.com/INRIA/spoon/blob/master/README.md -->
         <!-- We list all current integrators here for mavencentral-->
