fix: fix release script for modules

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -1,4 +1,5 @@
 project:
+  version: 10.4.0-SNAPSHOT
   name: spoon-core
   description: Spoon is an open-source library to analyze, rewrite, transform, transpile Java source code. 
   longDescription: Spoon is an open-source library to analyze, rewrite, transform, transpile Java source code. 
@@ -24,6 +25,7 @@ release:
     owner: INRIA
     changelog:
       formatted: ALWAYS
+      preset: conventional-commits
       format: '- {{commitShortHash}} {{commitTitle}}'
       contributors:
         format: '- {{contributorName}} ({{contributorUsernameAsLink}})'
@@ -40,6 +42,7 @@ deploy:
       maven-central:
         active: ALWAYS
         url: https://s01.oss.sonatype.org/service/local
+        snapshotUrl: https://s01.oss.sonatype.org/content/repositories/snapshots
         closeRepository: true
         releaseRepository: true
         stagingRepositories:
