--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-model</artifactId>
-      <version>[3.6.0,)</version>
+      <version>3.9.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
