--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,10 @@
       <version>2.13.0</version>
     </dependency>
     <dependency>
+	<!--We use this old version for maximum compatibility, and because we use for all maven commands the system maven -->
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-model</artifactId>
-      <version>3.9.2</version>
+      <version>3.6.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
