--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -1,5 +1,5 @@
 project:
-  name: spoon-core
+  name: spoon
   description: Spoon is an open-source library to analyze, rewrite, transform, transpile Java source code. 
   longDescription: Spoon is an open-source library to analyze, rewrite, transform, transpile Java source code. 
                    It parses source files to build a well-designed AST with powerful analysis and transformation API. 
@@ -40,7 +40,9 @@ deploy:
     nexus2:
       maven-central:
         active: ALWAYS
-        url: https://s01.oss.sonatype.org/service/local
+        # Spoon is hosted on the legacy sonatype instance, see
+        # https://central.sonatype.org/publish/publish-guide/#releasing-to-central
+        url: https://oss.sonatype.org/service/local
         closeRepository: true
         releaseRepository: true
         stagingRepositories:
