--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
       <version>2.13.0</version>
     </dependency>
     <dependency>
-	<!--We use this old version for maximum compatibility, and because we use for all maven commands the system maven -->
+	<!-- We use this old version for maximum compatibility, as we use the system maven installation for all commands anyways. -->
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-model</artifactId>
       <version>3.6.0</version>
