--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -15,7 +15,7 @@ project:
   links:
     homepage: https://spoon.gforge.inria.fr/
   java:
-    groupId: fr.inria.gforge.spoon
+    groupId: fr.inria.gforge
     version: "11"
   inceptionYear: "2015"
 
