--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -187,8 +187,9 @@ jobs:
         run: |
           cd spoon-visualisation
           mvn -q versions:use-latest-versions -DallowSnapshots=true -Dincludes=fr.inria.gforge.spoon
+          mvn -q versions:update-parent -DallowSnapshots=true
           git diff
-          mvn -q -Djava.src.version=11 test
+          mvn -q test
           mvn -q depclean:depclean
 
       - name: Spoon-smpl
