--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -196,6 +196,7 @@ jobs:
         run: |
           cd spoon-smpl
           mvn -q versions:use-latest-versions -DallowSnapshots=true -Dincludes=fr.inria.gforge.spoon
+          mvn -q versions:update-parent -DallowSnapshots=true
           git diff
           mvn -q -Djava.src.version=11 test
           mvn -q checkstyle:checkstyle license:check
