--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -175,15 +175,22 @@ jobs:
           git diff
           mvn -q test
           mvn -q checkstyle:checkstyle license:check
-
-      - name: Spoon-dataflow
-        working-directory: spoon-dataflow
+      # spoon dataflow
+      - name: Cache downloaded file
+        uses: actions/cache@v2
+        with:
+          path: z3-4.8.4.d6df51951f4c-x64-ubuntu-14.04.zip
+          key: ${{ runner.os }}-z3-4.8.4.d6df51951f4c-x64-ubuntu-14.04.zip
+          restore-keys: |
+            ${{ runner.os }}-z3-4.8.4.d6df51951f4c-x64-ubuntu-14.04.zip
+      - name: Download and unzip file
         run: |
           wget https://projects.ow2.org/download/spoon/WebHome/z3-4.8.4.d6df51951f4c-x64-ubuntu-14.04.zip
           unzip z3-4.8.4.d6df51951f4c-x64-ubuntu-14.04.zip
-          export LD_LIBRARY_PATH=./z3-4.8.4.d6df51951f4c-x64-ubuntu-14.04/bin
-          ./gradlew build
-
+      - name: Set LD_LIBRARY_PATH
+        run: export LD_LIBRARY_PATH=./z3-4.8.4.d6df51951f4c-x64-ubuntu-14.04/bin
+      - name: Build project
+        run: ./gradlew build
       - name: Spoon-visualisation
         working-directory: spoon-visualisation
         run: |
