fix: use mavenLocal

--- a/spoon-dataflow/build.gradle
+++ b/spoon-dataflow/build.gradle
@@ -15,6 +15,7 @@ version '1.0'
 sourceCompatibility = JavaVersion.VERSION_11
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven { url 'https://raw.github.com/SpoonLabs/spoon-dependencies/master' }
 }
