--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,9 +45,9 @@ jobs:
       - name: Disable Git's autocrlf
         run: git config --global core.autocrlf false
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
-      - uses: oracle-actions/setup-java@2c4df2930e35870536667f383d87f1246fbe613f # v1
+      - uses: actions/setup-java@v3
         with:
-          website: jdk.java.net
+          distribution: temurin
           java-version: ${{ matrix.java }}
 
       - name: Get date for cache # see https://github.com/actions/cache README
