--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,18 +27,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        java: [11, 17, 20, 21-ea]
-        os: [ubuntu-latest, windows-latest]
-        exclude:
-          - os: windows-latest
-            java: 17
-          - os: windows-latest
-            java: 20
-          - os: windows-latest
-            java: 21-ea
-
-
-
+        java: [11]
+        os: [ubuntu-latest]
 
     name: Tests with Java ${{ matrix.java }} on ${{ matrix.os }}
     steps:
